[package]
name = "jai_hanuman"
version = "0.1.0"
authors = ["Ankit Nautiyal <akn_github@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = "~0.8.1" 
bracket-terminal = "~0.8.1" 
rand = "0.5.5"
